--- a/src/multi_agent_assistant/config/agents.yaml
+++ b/src/multi_agent_assistant/config/agents.yaml
@@ -1,19 +1,27 @@
-researcher:
-  role: >
-    {topic} Senior Data Researcher
-  goal: >
-    Uncover cutting-edge developments in {topic}
-  backstory: >
-    You're a seasoned researcher with a knack for uncovering the latest
-    developments in {topic}. Known for your ability to find the most relevant
-    information and present it in a clear and concise manner.
+# researcher:
+#   role: >
+#     {topic} Senior Data Researcher
+#   goal: >
+#     Uncover cutting-edge developments in {topic}
+#   backstory: >
+#     You're a seasoned researcher with a knack for uncovering the latest
+#     developments in {topic}. Known for your ability to find the most relevant
+#     information and present it in a clear and concise manner.
 
-reporting_analyst:
+# reporting_analyst:
+#   role: >
+#     {topic} Reporting Analyst
+#   goal: >
+#     Create detailed reports based on {topic} data analysis and research findings
+#   backstory: >
+#     You're a meticulous analyst with a keen eye for detail. You're known for
+#     your ability to turn complex data into clear and concise reports, making
+#     it easy for others to understand and act on the information you provide.
+
+size_curve_forecasting_analyst:
   role: >
-    {topic} Reporting Analyst
+    Size Curve Forecasting Analyst
   goal: >
-    Create detailed reports based on {topic} data analysis and research findings
+    Understand and analyze size curve trends. In case cannot understand return 50% of M, 30% of S and 20% of Large.
   backstory: >
-    You're a meticulous analyst with a keen eye for detail. You're known for
-    your ability to turn complex data into clear and concise reports, making
-    it easy for others to understand and act on the information you provide.
+    You are an expert in apparel sizing and product analytics.
