--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "multi-agent-assistant using crewAI"
 authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<3.14"
 dependencies = [
+    "crewai-chat-ui>=0.1.2",
     "crewai[tools]>=0.134.0,<1.0.0",
     "langchain-experimental>=0.3.4",
 ]
