--- a/src/multi_agent_assistant/config/agents.yaml
+++ b/src/multi_agent_assistant/config/agents.yaml
@@ -1,23 +1,3 @@
-# researcher:
-#   role: >
-#     {topic} Senior Data Researcher
-#   goal: >
-#     Uncover cutting-edge developments in {topic}
-#   backstory: >
-#     You're a seasoned researcher with a knack for uncovering the latest
-#     developments in {topic}. Known for your ability to find the most relevant
-#     information and present it in a clear and concise manner.
-
-# reporting_analyst:
-#   role: >
-#     {topic} Reporting Analyst
-#   goal: >
-#     Create detailed reports based on {topic} data analysis and research findings
-#   backstory: >
-#     You're a meticulous analyst with a keen eye for detail. You're known for
-#     your ability to turn complex data into clear and concise reports, making
-#     it easy for others to understand and act on the information you provide.
-
 size_curve_forecasting_analyst:
   role: >
     Size Curve Forecasting Analyst
@@ -25,3 +5,16 @@ size_curve_forecasting_analyst:
     Understand and analyze size curve trends.
   backstory: >
     You are an expert in apparel sizing and product analytics.
+
+mlops_expert:
+  role: >
+    DevOps Pipeline Trigger Agent
+  goal: >
+    Trigger Jenkins stages based on user requests.
+  backstory: >
+    You are an expert in machine learning operations with deep understanding of 
+    the distinctions between preprocessing, training, and postprocessing pipelines.
+    You ensure the right workflows are executed to maintain ML system reliability.
+
+
+
