--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "crewai-chat-ui>=0.1.2",
     "crewai[tools]>=0.134.0,<1.0.0",
     "langchain-experimental>=0.3.4",
+    "pytest>=8.4.1",
 ]
 
 [project.scripts]
